--- a/ricercaesperienze_logged.html
+++ b/ricercaesperienze_logged.html
@@ -189,7 +189,9 @@
 							</div>
 						</aside>
 					</div>
-			
+          <div class="alert alert-info" role="alert">
+            Ho trovato i seguenti articoli a seguito della tua ricerca!
+          </div>          
 					<!-- Elenco esperienze -->
 					<div class="row">
             <div class="col-lg-4">
@@ -212,46 +214,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-lg-4">
-              <div class="thumbnail">
-                <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
-                <div class="caption">
-                  <h4>Esperienza</h4>
-                  <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
-                  <p><a class="btn btn-default" href="esperienza.html" role="button">Dettagli esperienza &raquo;</a></p>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-4">
-              <div class="thumbnail">
-                <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
-                <div class="caption">
-                  <h4>Esperienza</h4>
-                  <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
-                  <p><a class="btn btn-default" href="esperienza.html" role="button">Dettagli esperienza &raquo;</a></p>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-4">
-              <div class="thumbnail">
-                <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
-                <div class="caption">
-                  <h4>Esperienza</h4>
-                  <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
-                  <p><a class="btn btn-default" href="esperienza.html" role="button">Dettagli esperienza &raquo;</a></p>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-4">
-              <div class="thumbnail">
-                <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
-                <div class="caption">
-                  <h4>Esperienza</h4>
-                  <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
-                  <p><a class="btn btn-default" href="esperienza.html" role="button">Dettagli esperienza &raquo;</a></p>
-                </div>
-              </div>
-            </div>
+
           </div>
 
 				</div>
