--- a/esperienze.html
+++ b/esperienze.html
@@ -205,7 +205,7 @@
 
 						<aside class="col-sm-3">
 							<div class="panel panel-default">
-								<form class="panel-body" action="ricerca.html">
+								<form class="panel-body" action="ricercaesperienze.html">
 									<label for="blogsearch">Cerca un'esperienza!</label> 
 									<input id="blogsearch" class="form-control" type="search" placeholder="Cerca...">
 								</form>
@@ -219,62 +219,62 @@
 							<div class="thumbnail">
 								<img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
 								<div class="caption">
-									<h4>Heading</h4>
+									<h4>Esperienza</h4>
 									<p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
-									<p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+									<p><a class="btn btn-default" href="esperienza.html" role="button">Dettagli esperienza &raquo;</a></p>
 								</div>
 							</div>
 						</div>
-						<div class="col-lg-4">
-							<div class="thumbnail">
-								<img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
-								<div class="caption">
-									<h4>Heading</h4>
-									<p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
-									<p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-								</div>
-							</div>
-						</div>
-						<div class="col-lg-4">
-							<div class="thumbnail">
-								<img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
-								<div class="caption">
-									<h4>Heading</h4>
-									<p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
-									<p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-								</div>
-							</div>
-						</div>
-						<div class="col-lg-4">
-							<div class="thumbnail">
-								<img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
-								<div class="caption">
-									<h4>Heading</h4>
-									<p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
-									<p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-								</div>
-							</div>
-						</div>
-						<div class="col-lg-4">
-							<div class="thumbnail">
-								<img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
-								<div class="caption">
-									<h4>Heading</h4>
-									<p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
-									<p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-								</div>
-							</div>
-						</div>
-						<div class="col-lg-4">
-							<div class="thumbnail">
-								<img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
-								<div class="caption">
-									<h4>Heading</h4>
-									<p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
-									<p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-								</div>
-							</div>
-						</div>
+            <div class="col-lg-4">
+              <div class="thumbnail">
+                <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
+                <div class="caption">
+                  <h4>Esperienza</h4>
+                  <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
+                  <p><a class="btn btn-default" href="esperienza.html" role="button">Dettagli esperienza &raquo;</a></p>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4">
+              <div class="thumbnail">
+                <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
+                <div class="caption">
+                  <h4>Esperienza</h4>
+                  <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
+                  <p><a class="btn btn-default" href="esperienza.html" role="button">Dettagli esperienza &raquo;</a></p>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4">
+              <div class="thumbnail">
+                <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
+                <div class="caption">
+                  <h4>Esperienza</h4>
+                  <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
+                  <p><a class="btn btn-default" href="esperienza.html" role="button">Dettagli esperienza &raquo;</a></p>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4">
+              <div class="thumbnail">
+                <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
+                <div class="caption">
+                  <h4>Esperienza</h4>
+                  <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
+                  <p><a class="btn btn-default" href="esperienza.html" role="button">Dettagli esperienza &raquo;</a></p>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4">
+              <div class="thumbnail">
+                <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
+                <div class="caption">
+                  <h4>Esperienza</h4>
+                  <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
+                  <p><a class="btn btn-default" href="esperienza.html" role="button">Dettagli esperienza &raquo;</a></p>
+                </div>
+              </div>
+            </div>
 					</div>
 
 				</div>
