--- a/ricercaesperienze_logged.html
+++ b/ricercaesperienze_logged.html
@@ -25,7 +25,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href=".">Shroom Space Ind.</a>
+          <a class="navbar-brand" href="indexlogged.html">Shroom Space Ind.</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
@@ -200,7 +200,7 @@
                 <div class="caption">
                   <h4>Esperienza</h4>
                   <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
-                  <p><a class="btn btn-default" href="esperienza.html" role="button">Dettagli esperienza &raquo;</a></p>
+                  <p><a class="btn btn-default" href="esperienza_logged.html" role="button">Dettagli esperienza &raquo;</a></p>
                 </div>
               </div>
             </div>
@@ -210,7 +210,7 @@
                 <div class="caption">
                   <h4>Esperienza</h4>
                   <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
-                  <p><a class="btn btn-default" href="esperienza.html" role="button">Dettagli esperienza &raquo;</a></p>
+                  <p><a class="btn btn-default" href="esperienza_logged.html" role="button">Dettagli esperienza &raquo;</a></p>
                 </div>
               </div>
             </div>
