Migliorati tag ricerca fotogallery

--- a/foto_logged.html
+++ b/foto_logged.html
@@ -184,22 +184,22 @@
 								<div class="col-md-6">
 									<p>Che cosa ti interessa?</p>
 									<div class="checkbox">
-										<label><input type="checkbox" value="" checked>Space</label>
+										<label><input type="checkbox" value="" checked><span class="label label-primary">Space</span></label>
 									</div>
 									<div class="checkbox">
-										<label><input type="checkbox" value="">Universe</label>
+										<label><input type="checkbox" value=""><span class="label label-default">Universe</span></label>
 									</div>
 									<div class="checkbox">
-										<label><input type="checkbox" value="" checked>Astronauts</label>
+										<label><input type="checkbox" value="" checked><span class="label label-danger">Astronauts</span></label>
 									</div>
 									<div class="checkbox">
-										<label><input type="checkbox" value="" checked>Earth</label>
+										<label><input type="checkbox" value="" checked><span class="label label-success">Earth</span></label>
 									</div>
 									<div class="checkbox">
-											<label><input type="checkbox" value="">Flight</label>
+											<label><input type="checkbox" value=""><span class="label label-warning">Flight</span></label>
 									</div>
 									<div class="checkbox">
-										<label><input type="checkbox" value="">Sky</label>
+										<label><input type="checkbox" value=""><span class="label label-info">Sky</span></label>
 									</div>
 								</div>
 								<div class="col-md-6">
