Migliorata ricerca per tag

--- a/news_logged.html
+++ b/news_logged.html
@@ -323,15 +323,38 @@
 
               <div class="panel panel-default">
                 <div class="panel-heading">
-                  <h4>Tags</h4>
+                  <h4>Ricerca per tag</h4>
                 </div>
                 <div class="panel-body">
-                  <a href="#" class="label label-danger">danger</a>
-                  <a href="#" class="label label-success">earth</a>
-                  <a href="#" class="label label-warning">flight</a>
-                  <a href="#" class="label label-info">sky</a>
-                  <a href="#" class="label label-primary">space</a>
-                  <a href="#" class="label label-default">universe</a>
+              <div class="row">
+                <div class="col-md-12 offset-3">
+
+                  <p>Che cosa ti interessa?</p>
+                  <div class="checkbox">
+                    <label><input type="checkbox" value="" checked><span class="label label-primary">Space</span></label>
+                  </div>
+                  <div class="checkbox">
+                    <label><input type="checkbox" value=""><span class="label label-default">Universe</span></label>
+                  </div>
+                  <div class="checkbox">
+                    <label><input type="checkbox" value="" checked><span class="label label-danger">Astronauts</span></label>
+                  </div>
+                  <div class="checkbox">
+                    <label><input type="checkbox" value="" checked><span class="label label-success">Earth</span></label>
+                  </div>
+                  <div class="checkbox">
+                      <label><input type="checkbox" value=""><span class="label label-warning">Flight</span></label>
+                  </div>
+                  <div class="checkbox">
+                    <label><input type="checkbox" value=""><span class="label label-info">Sky</span></label>
+                  </div>
+                </div>
+              </div>
+              <div class="row">  
+                <div class="col-md-12">
+                  <a href="ricercanews_logged.html"><button class="btn btn-success btn-lg">Cerca</button></a>
+                </div>
+              </div>
                 </div>
               </div>
               <div class="panel panel-default">
