--- a/esperienze_logged.html
+++ b/esperienze_logged.html
@@ -198,7 +198,7 @@
                 <div class="caption">
                   <h4>Esperienza</h4>
                   <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
-                  <p><a class="btn btn-default" href="esperienza.html" role="button">Dettagli esperienza &raquo;</a></p>
+                  <p><a class="btn btn-default" href="esperienza_logged.html" role="button">Dettagli esperienza &raquo;</a></p>
                 </div>
               </div>
             </div>
@@ -208,7 +208,7 @@
                 <div class="caption">
                   <h4>Esperienza</h4>
                   <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
-                  <p><a class="btn btn-default" href="esperienza.html" role="button">Dettagli esperienza &raquo;</a></p>
+                  <p><a class="btn btn-default" href="esperienza_logged.html" role="button">Dettagli esperienza &raquo;</a></p>
                 </div>
               </div>
             </div>
@@ -218,7 +218,7 @@
                 <div class="caption">
                   <h4>Esperienza</h4>
                   <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
-                  <p><a class="btn btn-default" href="esperienza.html" role="button">Dettagli esperienza &raquo;</a></p>
+                  <p><a class="btn btn-default" href="esperienza_logged.html" role="button">Dettagli esperienza &raquo;</a></p>
                 </div>
               </div>
             </div>
@@ -228,7 +228,7 @@
                 <div class="caption">
                   <h4>Esperienza</h4>
                   <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
-                  <p><a class="btn btn-default" href="esperienza.html" role="button">Dettagli esperienza &raquo;</a></p>
+                  <p><a class="btn btn-default" href="esperienza_logged.html" role="button">Dettagli esperienza &raquo;</a></p>
                 </div>
               </div>
             </div>
@@ -238,7 +238,7 @@
                 <div class="caption">
                   <h4>Esperienza</h4>
                   <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
-                  <p><a class="btn btn-default" href="esperienza.html" role="button">Dettagli esperienza &raquo;</a></p>
+                  <p><a class="btn btn-default" href="esperienza_logged.html" role="button">Dettagli esperienza &raquo;</a></p>
                 </div>
               </div>
             </div>
@@ -248,7 +248,7 @@
                 <div class="caption">
                   <h4>Esperienza</h4>
                   <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
-                  <p><a class="btn btn-default" href="esperienza.html" role="button">Dettagli esperienza &raquo;</a></p>
+                  <p><a class="btn btn-default" href="esperienza_logged.html" role="button">Dettagli esperienza &raquo;</a></p>
                 </div>
               </div>
             </div>
