sistemati tag fotogallery

--- a/foto.html
+++ b/foto.html
@@ -241,8 +241,8 @@
 							</a>
 							<div class="caption">
 								<small> Tags:</small>
-								<span class="btn label label-primary">Space</span>
-								<span class="btn label label-default">Universe</span>
+								<span class="label label-primary">Space</span>
+								<span class="label label-default">Universe</span>
 							</div>
 						</div>
 					</div>
@@ -253,8 +253,8 @@
 							</a>
 							<div class="caption">
 								<small> Tags:</small>
-								<span class="btn label label-danger">Astronauts</span>
-								<span class="btn label label-primary">Space</span>
+								<span class="label label-danger">Astronauts</span>
+								<span class="label label-primary">Space</span>
 							</div>
 						</div>
 					</div>
@@ -265,7 +265,7 @@
 							</a>
 							<div class="caption">
 								<small> Tags:</small>
-								<span class="btn label label-success">Earth</span>
+								<span class="label label-success">Earth</span>
 							</div>
 						</div>
 					</div>
@@ -276,10 +276,10 @@
 							</a>
 							<div class="caption">
 								<small> Tags:</small>
-								<span class="btn label label-success">Earth</span>
-								<span class="btn label label-warning">Flight</span>
-								<span class="btn label label-primary">Space</span>
-								<span class="btn label label-default">Universe</span>
+								<span class="label label-success">Earth</span>
+								<span class="label label-warning">Flight</span>
+								<span class="label label-primary">Space</span>
+								<span class="label label-default">Universe</span>
 							</div>
 						</div>
 					</div>
@@ -290,8 +290,8 @@
 							</a>
 							<div class="caption">
 								<small> Tags:</small>
-								<span class="btn label label-info">Sky</span>
-								<span class="btn label label-success">Earth</span>
+								<span class="label label-info">Sky</span>
+								<span class="label label-success">Earth</span>
 							</div>
 						</div>
 					</div>
@@ -302,8 +302,8 @@
 							</a>
 							<div class="caption">
 								<small> Tags:</small>
-								<span class="btn label label-danger">Food</span>
-								<span class="btn label label-primary">Ipsum</span>
+								<span class="label label-danger">Food</span>
+								<span class="label label-primary">Ipsum</span>
 							</div>
 						</div>
 					</div>
@@ -314,8 +314,8 @@
 							</a>
 							<div class="caption">
 								<small> Tags:</small>
-								<span class="btn label label-danger">Food</span>
-								<span class="btn label label-primary">Ipsum</span>
+								<span class="label label-danger">Food</span>
+								<span class="label label-primary">Ipsum</span>
 							</div>
 						</div>
 					</div>
@@ -326,8 +326,8 @@
 							</a>
 							<div class="caption">
 								<small> Tags:</small>
-								<span class="btn label label-danger">Food</span>
-								<span class="btn label label-primary">Ipsum</span>
+								<span class="label label-danger">Food</span>
+								<span class="label label-primary">Ipsum</span>
 							</div>
 						</div>
 					</div>
@@ -338,8 +338,8 @@
 							</a>
 							<div class="caption">
 								<small> Tags:</small>
-								<span class="btn label label-danger">Food</span>
-								<span class="btn label label-primary">Ipsum</span>
+								<span class="label label-danger">Food</span>
+								<span class="label label-primary">Ipsum</span>
 							</div>
 						</div>
 					</div>
