--- a/foto_logged.html
+++ b/foto_logged.html
@@ -218,8 +218,8 @@
 							</a>
 							<div class="caption">
 								<small> Tags:</small>
-								<span class="btn label label-primary">Space</span>
-								<span class="btn label label-default">Universe</span>
+								<span class="label label-primary">Space</span>
+								<span class="label label-default">Universe</span>
 							</div>
 						</div>
 					</div>
@@ -230,8 +230,8 @@
 							</a>
 							<div class="caption">
 								<small> Tags:</small>
-								<span class="btn label label-danger">Astronauts</span>
-								<span class="btn label label-primary">Space</span>
+								<span class="label label-danger">Astronauts</span>
+								<span class="label label-primary">Space</span>
 							</div>
 						</div>
 					</div>
@@ -242,7 +242,7 @@
 							</a>
 							<div class="caption">
 								<small> Tags:</small>
-								<span class="btn label label-success">Earth</span>
+								<span class="label label-success">Earth</span>
 							</div>
 						</div>
 					</div>
@@ -253,10 +253,10 @@
 							</a>
 							<div class="caption">
 								<small> Tags:</small>
-								<span class="btn label label-success">Earth</span>
-								<span class="btn label label-warning">Flight</span>
-								<span class="btn label label-primary">Space</span>
-								<span class="btn label label-default">Universe</span>
+								<span class="label label-success">Earth</span>
+								<span class="label label-warning">Flight</span>
+								<span class="label label-primary">Space</span>
+								<span class="label label-default">Universe</span>
 							</div>
 						</div>
 					</div>
@@ -267,8 +267,8 @@
 							</a>
 							<div class="caption">
 								<small> Tags:</small>
-								<span class="btn label label-info">Sky</span>
-								<span class="btn label label-success">Earth</span>
+								<span class="label label-info">Sky</span>
+								<span class="label label-success">Earth</span>
 							</div>
 						</div>
 					</div>
@@ -279,8 +279,8 @@
 							</a>
 							<div class="caption">
 								<small> Tags:</small>
-								<span class="btn label label-danger">Food</span>
-								<span class="btn label label-primary">Ipsum</span>
+								<span class="label label-danger">Food</span>
+								<span class="label label-primary">Ipsum</span>
 							</div>
 						</div>
 					</div>
@@ -291,8 +291,8 @@
 							</a>
 							<div class="caption">
 								<small> Tags:</small>
-								<span class="btn label label-danger">Food</span>
-								<span class="btn label label-primary">Ipsum</span>
+								<span class="label label-danger">Food</span>
+								<span class="label label-primary">Ipsum</span>
 							</div>
 						</div>
 					</div>
@@ -303,8 +303,8 @@
 							</a>
 							<div class="caption">
 								<small> Tags:</small>
-								<span class="btn label label-danger">Food</span>
-								<span class="btn label label-primary">Ipsum</span>
+								<span class="label label-danger">Food</span>
+								<span class="label label-primary">Ipsum</span>
 							</div>
 						</div>
 					</div>
@@ -315,8 +315,8 @@
 							</a>
 							<div class="caption">
 								<small> Tags:</small>
-								<span class="btn label label-danger">Food</span>
-								<span class="btn label label-primary">Ipsum</span>
+								<span class="label label-danger">Food</span>
+								<span class="label label-primary">Ipsum</span>
 							</div>
 						</div>
 					</div>
