sistemati tag video

--- a/video.html
+++ b/video.html
@@ -207,22 +207,22 @@
 								<div class="col-md-6">
 									<p>Che cosa ti interessa?</p>
 									<div class="checkbox">
-										<label><input type="checkbox" value="" checked>Space</label>
+										<label><input type="checkbox" value="" checked><span class="label label-primary">Space</span></label>
 									</div>
 									<div class="checkbox">
-										<label><input type="checkbox" value="">Universe</label>
+										<label><input type="checkbox" value=""><span class="label label-default">Universe</span></label>
 									</div>
 									<div class="checkbox">
-										<label><input type="checkbox" value="" checked>Astronauts</label>
+										<label><input type="checkbox" value="" checked><span class="label label-danger">Astronauts</span></label>
 									</div>
 									<div class="checkbox">
-										<label><input type="checkbox" value="" checked>Earth</label>
+										<label><input type="checkbox" value="" checked><span class="label label-success">Earth</span></label>
 									</div>
 									<div class="checkbox">
-											<label><input type="checkbox" value="">Flight</label>
+											<label><input type="checkbox" value=""><span class="label label-warning">Flight</span></label>
 									</div>
 									<div class="checkbox">
-										<label><input type="checkbox" value="">Sky</label>
+										<label><input type="checkbox" value=""><span class="label label-info">Sky</span></label>
 									</div>
 								</div>
 								<div class="col-md-6">
@@ -242,8 +242,8 @@
 							</div>
 							<div class="caption">
 								<small> Tags:</small>
-								<span class="btn label label-primary">Space</span>
-								<span class="btn label label-default">Universe</span>
+								<span class="label label-primary">Space</span>
+								<span class="label label-default">Universe</span>
 							</div>
 							</div>
 					</div>
@@ -255,8 +255,8 @@
 							</div>
 							<div class="caption">
 								<small> Tags:</small>
-								<span class="btn label label-danger">Astronauts</span>
-								<span class="btn label label-primary">Space</span>
+								<span class="label label-danger">Astronauts</span>
+								<span class="label label-primary">Space</span>
 							</div>
 						</div>
 					</div>
@@ -268,7 +268,7 @@
 							</div>
 							<div class="caption">
 								<small> Tags:</small>
-								<span class="btn label label-success">Earth</span>
+								<span class="label label-success">Earth</span>
 							</div>
 						</div>
 					</div>
@@ -280,10 +280,10 @@
 							</div>
 							<div class="caption">
 								<small> Tags:</small>
-								<span class="btn label label-success">Earth</span>
-								<span class="btn label label-warning">Flight</span>
-								<span class="btn label label-primary">Space</span>
-								<span class="btn label label-default">Universe</span>
+								<span class="label label-success">Earth</span>
+								<span class="label label-warning">Flight</span>
+								<span class="label label-primary">Space</span>
+								<span class="label label-default">Universe</span>
 							</div>
 						</div>
 					</div>
@@ -295,8 +295,8 @@
 							</div>
 							<div class="caption">
 								<small> Tags:</small>
-								<span class="btn label label-info">Sky</span>
-								<span class="btn label label-success">Earth</span>
+								<span class="label label-info">Sky</span>
+								<span class="label label-success">Earth</span>
 							</div>
 						</div>
 					</div>
@@ -308,8 +308,8 @@
 							</div>
 							<div class="caption">
 								<small> Tags:</small>
-								<span class="btn label label-danger">Food</span>
-								<span class="btn label label-primary">Ipsum</span>
+								<span class="label label-danger">Food</span>
+								<span class="label label-primary">Ipsum</span>
 							</div>
 						</div>
 					</div>
@@ -321,8 +321,8 @@
 							</div>
 							<div class="caption">
 								<small> Tags:</small>
-								<span class="btn label label-danger">Food</span>
-								<span class="btn label label-primary">Ipsum</span>
+								<span class="label label-danger">Food</span>
+								<span class="label label-primary">Ipsum</span>
 							</div>
 						</div>
 					</div>
@@ -334,8 +334,8 @@
 							</div>
 							<div class="caption">
 								<small> Tags:</small>
-								<span class="btn label label-danger">Food</span>
-								<span class="btn label label-primary">Ipsum</span>
+								<span class="label label-danger">Food</span>
+								<span class="label label-primary">Ipsum</span>
 							</div>
 						</div>
 					</div>
@@ -347,8 +347,8 @@
 							</div>
 							<div class="caption">
 								<small> Tags:</small>
-								<span class="btn label label-danger">Food</span>
-								<span class="btn label label-primary">Ipsum</span>
+								<span class="label label-danger">Food</span>
+								<span class="label label-primary">Ipsum</span>
 							</div>
 						</div>
 					</div>
