--- a/video_logged.html
+++ b/video_logged.html
@@ -184,22 +184,22 @@
 								<div class="col-md-6">
 									<p>Che cosa ti interessa?</p>
 									<div class="checkbox">
-										<label><input type="checkbox" value="" checked>Space</label>
+										<label><input type="checkbox" value="" checked><span class="label label-primary">Space</span></label>
 									</div>
 									<div class="checkbox">
-										<label><input type="checkbox" value="">Universe</label>
+										<label><input type="checkbox" value=""><span class="label label-default">Universe</span></label>
 									</div>
 									<div class="checkbox">
-										<label><input type="checkbox" value="" checked>Astronauts</label>
+										<label><input type="checkbox" value="" checked><span class="label label-danger">Astronauts</span></label>
 									</div>
 									<div class="checkbox">
-										<label><input type="checkbox" value="" checked>Earth</label>
+										<label><input type="checkbox" value="" checked><span class="label label-success">Earth</span></label>
 									</div>
 									<div class="checkbox">
-											<label><input type="checkbox" value="">Flight</label>
+											<label><input type="checkbox" value=""><span class="label label-warning">Flight</span></label>
 									</div>
 									<div class="checkbox">
-										<label><input type="checkbox" value="">Sky</label>
+										<label><input type="checkbox" value=""><span class="label label-info">Sky</span></label>
 									</div>
 								</div>
 								<div class="col-md-6">
@@ -219,8 +219,8 @@
 							</div>
 							<div class="caption">
 								<small> Tags:</small>
-								<span class="btn label label-primary">Space</span>
-								<span class="btn label label-default">Universe</span>
+								<span class="label label-primary">Space</span>
+								<span class="label label-default">Universe</span>
 							</div>
 							</div>
 					</div>
@@ -232,8 +232,8 @@
 							</div>
 							<div class="caption">
 								<small> Tags:</small>
-								<span class="btn label label-danger">Astronauts</span>
-								<span class="btn label label-primary">Space</span>
+								<span class="label label-danger">Astronauts</span>
+								<span class="label label-primary">Space</span>
 							</div>
 						</div>
 					</div>
@@ -245,7 +245,7 @@
 							</div>
 							<div class="caption">
 								<small> Tags:</small>
-								<span class="btn label label-success">Earth</span>
+								<span class="label label-success">Earth</span>
 							</div>
 						</div>
 					</div>
@@ -257,10 +257,10 @@
 							</div>
 							<div class="caption">
 								<small> Tags:</small>
-								<span class="btn label label-success">Earth</span>
-								<span class="btn label label-warning">Flight</span>
-								<span class="btn label label-primary">Space</span>
-								<span class="btn label label-default">Universe</span>
+								<span class="label label-success">Earth</span>
+								<span class="label label-warning">Flight</span>
+								<span class="label label-primary">Space</span>
+								<span class="label label-default">Universe</span>
 							</div>
 						</div>
 					</div>
@@ -272,8 +272,8 @@
 							</div>
 							<div class="caption">
 								<small> Tags:</small>
-								<span class="btn label label-info">Sky</span>
-								<span class="btn label label-success">Earth</span>
+								<span class="label label-info">Sky</span>
+								<span class="label label-success">Earth</span>
 							</div>
 						</div>
 					</div>
@@ -285,8 +285,8 @@
 							</div>
 							<div class="caption">
 								<small> Tags:</small>
-								<span class="btn label label-danger">Food</span>
-								<span class="btn label label-primary">Ipsum</span>
+								<span class="label label-danger">Food</span>
+								<span class="label label-primary">Ipsum</span>
 							</div>
 						</div>
 					</div>
@@ -298,8 +298,8 @@
 							</div>
 							<div class="caption">
 								<small> Tags:</small>
-								<span class="btn label label-danger">Food</span>
-								<span class="btn label label-primary">Ipsum</span>
+								<span class="label label-danger">Food</span>
+								<span class="label label-primary">Ipsum</span>
 							</div>
 						</div>
 					</div>
@@ -311,8 +311,8 @@
 							</div>
 							<div class="caption">
 								<small> Tags:</small>
-								<span class="btn label label-danger">Food</span>
-								<span class="btn label label-primary">Ipsum</span>
+								<span class="label label-danger">Food</span>
+								<span class="label label-primary">Ipsum</span>
 							</div>
 						</div>
 					</div>
@@ -324,8 +324,8 @@
 							</div>
 							<div class="caption">
 								<small> Tags:</small>
-								<span class="btn label label-danger">Food</span>
-								<span class="btn label label-primary">Ipsum</span>
+								<span class="label label-danger">Food</span>
+								<span class="label label-primary">Ipsum</span>
 							</div>
 						</div>
 					</div>
