ultimi fix ai tag

--- a/videofiltrato.html
+++ b/videofiltrato.html
@@ -222,8 +222,8 @@
 				         	</div>
 							<div class="caption pull">
 								<small> Tags:</small>
-								<span class="btn label label-primary">Space</span>
-								<span class="btn label label-default">Universe</span>
+								<span class="label label-primary">Space</span>
+								<span class="label label-default">Universe</span>
 							</div>
 						</div>
 					</div>
@@ -235,8 +235,8 @@
 				         	</div>
 							<div class="caption">
 								<small> Tags:</small>
-								<span class="btn label label-danger">Astronauts</span>
-								<span class="btn label label-primary">Space</span>
+								<span class="label label-danger">Astronauts</span>
+								<span class="label label-primary">Space</span>
 							</div>
 						</div>
 					</div>
@@ -248,7 +248,7 @@
 				         	</div>
 							<div class="caption">
 								<small> Tags:</small>
-								<span class="btn label label-success">Earth</span>
+								<span class="label label-success">Earth</span>
 							</div>
 						</div>
 					</div>
@@ -260,10 +260,10 @@
 				         	</div>
 							<div class="caption">
 								<small> Tags:</small>
-								<span class="btn label label-success">Earth</span>
-								<span class="btn label label-warning">Flight</span>
-								<span class="btn label label-primary">Space</span>
-								<span class="btn label label-default">Universe</span>
+								<span class="label label-success">Earth</span>
+								<span class="label label-warning">Flight</span>
+								<span class="label label-primary">Space</span>
+								<span class="label label-default">Universe</span>
 							</div>
 						</div>
 					</div>
@@ -275,8 +275,8 @@
 				         	</div>
 							<div class="caption">
 								<small> Tags:</small>
-								<span class="btn label label-info">Sky</span>
-								<span class="btn label label-success">Earth</span>
+								<span class="label label-info">Sky</span>
+								<span class="label label-success">Earth</span>
 							</div>
 						</div>
 					</div>
