--- a/fotofiltrato_logged.html
+++ b/fotofiltrato_logged.html
@@ -195,8 +195,8 @@
 							</a>
 							<div class="caption pull">
 								<small> Tags:</small>
-								<span class="btn label label-primary">Space</span>
-								<span class="btn label label-default">Universe</span>
+								<span class="abel label-primary">Space</span>
+								<span class="label label-default">Universe</span>
 							</div>
 						</div>
 					</div>
@@ -207,8 +207,8 @@
 							</a>
 							<div class="caption">
 								<small> Tags:</small>
-								<span class="btn label label-danger">Astronauts</span>
-								<span class="btn label label-primary">Space</span>
+								<span class="label label-danger">Astronauts</span>
+								<span class="label label-primary">Space</span>
 							</div>
 						</div>
 					</div>
@@ -219,7 +219,7 @@
 							</a>
 							<div class="caption">
 								<small> Tags:</small>
-								<span class="btn label label-success">Earth</span>
+								<span class="label label-success">Earth</span>
 							</div>
 						</div>
 					</div>
@@ -230,10 +230,10 @@
 							</a>
 							<div class="caption">
 								<small> Tags:</small>
-								<span class="btn label label-success">Earth</span>
-								<span class="btn label label-warning">Flight</span>
-								<span class="btn label label-primary">Space</span>
-								<span class="btn label label-default">Universe</span>
+								<span class="label label-success">Earth</span>
+								<span class="label label-warning">Flight</span>
+								<span class="label label-primary">Space</span>
+								<span class="label label-default">Universe</span>
 							</div>
 						</div>
 					</div>
@@ -244,8 +244,8 @@
 							</a>
 							<div class="caption">
 								<small> Tags:</small>
-								<span class="btn label label-info">Sky</span>
-								<span class="btn label label-success">Earth</span>
+								<span class="label label-info">Sky</span>
+								<span class="label label-success">Earth</span>
 							</div>
 						</div>
 					</div>
