--- a/team.html
+++ b/team.html
@@ -287,7 +287,7 @@
 		</footer>
 
 		<!-- SCRIPTS -->
-		<script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+		<script src="style/bootstrap_local/js/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
 		<script src="style/bootstrap_local/js/bootstrap.min.js"></script>
 	</body>
 
