--- a/esperienza_logged.html
+++ b/esperienza_logged.html
@@ -141,7 +141,7 @@
                   <a href="user.html">Profilo utente</a>
                 </li>
                 <li>
-                  <a href="indexlogged.html">Logout</a>
+                  <a href="index.html">Logout</a>
                 </li>
               </ul>
             </li>
